# State-Disturbance_NAO_Observers

./: .gitignore  README.md
Logs/Extra/: stephens_x.txt  stephens_x_gt.txt  stephens_y.txt  stephens_y_gt.txt
Logs/Stand_no_balance/Constant/: kalman_x.txt  kalman_x_gt.txt  kalman_y.txt  kalman_y_gt.txt  kalman_y_un.txt  kalman_z.txt  kalman_z_gt.txt  kalman_z_un.txt  luenberger_x.txt  luenberger_x_gt.txt  luenberger_y.txt  luenberger_y_gt.txt  stephens_x.txt  stephens_x_gt.txt  stephens_x_un.txt  stephens_y.txt  stephens_y_gt.txt
Logs/Stand_no_balance/Periodic/: kalman_x.txt  kalman_x_gt.txt  kalman_x_un.txt  kalman_y.txt  kalman_y_gt.txt  kalman_z.txt  kalman_z_gt.txt  kalman_z_un.txt  luenberger_x.txt  luenberger_x_gt.txt  luenberger_y.txt  luenberger_y_gt.txt  stephens_x.txt  stephens_x_gt.txt  stephens_y.txt  stephens_y_gt.txt  stephens_y_un.txt
Logs/Stand_with_balance/Constant/: kalman_x.txt  kalman_x_gt.txt  kalman_x_un.txt  kalman_y.txt  kalman_y_gt.txt  kalman_z.txt  kalman_z_gt.txt  kalman_z_un.txt  luenberger_x.txt  luenberger_x_gt.txt  luenberger_y.txt  luenberger_y_gt.txt  stephens_x.txt  stephens_x_gt.txt  stephens_y.txt  stephens_y_gt.txt  stephens_y_un.txt
Logs/Stand_with_balance/Periodic/: kalman_x.txt  kalman_x_gt.txt  kalman_x_un.txt  kalman_y.txt  kalman_y_gt.txt  kalman_z.txt  kalman_z_gt.txt  kalman_z_un.txt  luenberger_x.txt  luenberger_x_gt.txt  luenberger_y.txt  luenberger_y_gt.txt  stephens_x.txt  stephens_x_gt.txt  stephens_x_un.txt  stephens_y.txt  stephens_y_gt.txt
Logs/Walking/Constant/: kalman_x.txt  kalman_x_gt.txt  kalman_x_un.txt  kalman_y.txt  kalman_y_gt.txt  kalman_z.txt  kalman_z_gt.txt  kalman_z_un.txt  luenberger_x.txt  luenberger_x_gt.txt  luenberger_y.txt  luenberger_y_gt.txt  stephens_x.txt  stephens_x_gt.txt  stephens_x_un.txt  stephens_y.txt  stephens_y_gt.txt
Logs/Walking/Periodic/: kalman_x.txt  (+16 more)
Testbed/: CMakeLists.txt  Controller.cpp  Controller.hpp  MPCSolver.cpp  MPCSolver.hpp  NAO.sdf  NaoEventHandler.cpp  NaoEventHandler.hpp  NaoWidget.cpp  NaoWidget.hpp  NaoWorldNode.cpp  Observer.cpp  Observer.hpp  cmake_install.cmake  ground.urdf  main.cpp
Testbed/qpOASES/: Constants.hpp  SQProblemSchur.cpp  qpOASES.hpp
Utils/: metrics.py  plot.py
